unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/zkmulti__RequestedShipmentDocuments__c.object-meta.xml
<CustomObject>
    <label>Requested Shipment Documents</label>
    <nameField>
        <displayFormat>ReqShipDocs-{00000000}</displayFormat>
        <label>Requested Shipment Documents Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requested Shipment Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>