unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__CO__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Of Origin</label>
    <type>Checkbox</type>
</CustomField>