unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__CommercialInvoice__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CommercialInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Invoice</label>
    <referenceTo>zkmulti__CommercialInvoice__c</referenceTo>
    <relationshipLabel>Requested Shipment Documents</relationshipLabel>
    <relationshipName>FedEx2_Requested_Shipment_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>