unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__Consolidation__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Consolidation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidation</label>
    <referenceTo>zkmulti__MultiPackageShipment__c</referenceTo>
    <relationshipLabel>Requested Shipment Documents</relationshipLabel>
    <relationshipName>Requested_Shipment_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>