unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__ExportDate__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ExportDate__c</fullName>
    <label>Export Date</label>
    <type>Date</type>
</CustomField>