unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__Importer_Street__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Importer_Street__c</fullName>
    <label>Importer Street</label>
    <type>TextArea</type>
</CustomField>