unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__ImporterAccount__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ImporterAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sold-To / Importer of Records Account (if not same as consignee)</description>
    <inlineHelpText>Sold-To / Importer of Records Account (if not same as consignee)</inlineHelpText>
    <label>Sold-To/Importer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requested Shipment Documents</relationshipLabel>
    <relationshipName>FedEx2_Requested_Shipment_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>