unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__ImporterSameAsConsignee__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ImporterSameAsConsignee__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sold-To / Importer of Records Same as Consignee</description>
    <inlineHelpText>Sold-To / Importer of Records Same as Consignee</inlineHelpText>
    <label>Sold-To/Importer Same as Consignee</label>
    <type>Checkbox</type>
</CustomField>