unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__NaftaCoSignature__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NaftaCoSignature__c</fullName>
    <label>NAFTA CO Signature</label>
    <length>20</length>
    <type>Text</type>
</CustomField>