unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__OverridePaperlessForIntlDocuments__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__OverridePaperlessForIntlDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, indicates that the specified international documents will not be submitted electronically to Carrier</description>
    <inlineHelpText>If selected, indicates that the specified international documents will not be submitted electronically to Carrier</inlineHelpText>
    <label>Override Paperless for Intl Documents</label>
    <type>Checkbox</type>
</CustomField>