unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__PartialCommercialInvoice__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__PartialCommercialInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Commercial Invoice</label>
    <type>Checkbox</type>
</CustomField>