unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__ProFormaInvoice__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ProFormaInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pro Forma Invoice</label>
    <referenceTo>zkmulti__ProFormaInvoice__c</referenceTo>
    <relationshipLabel>Requested Shipment Documents</relationshipLabel>
    <relationshipName>FedEx2_Requested_Shipment_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>