unpackaged/main/default/objects/zkmulti__RequestedShipmentDocuments__c/fields/zkmulti__Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>zkmulti__MCShipment__c</referenceTo>
    <relationshipName>FedEx2_Requested_Shipment_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>